# examples/transmitter/swagger_server/models.py
@@ -101,7 +101,7 @@ class PollDeliveryMethod(BaseModel):
         'https://schemas.openid.net/secevent/risc/delivery-method/poll'
     ] = 'https://schemas.openid.net/secevent/risc/delivery-method/poll'
     endpoint_url: Optional[AnyUrl] = Field(
-        ...,
+        None,
         description='The URL where events can be retrieved from. This is specified by the Transmitter.',
     )
 
@@ -444,8 +444,8 @@ class StreamConfiguration(BaseModel):
         None,
         description='Read-Write.\nA JSON object containing a set of name/value pairs specifying configuration parameters for the SET delivery\nmethod. The actual delivery method is identified by the special key method with the value being a URI as defined\nin [Section 11.2.1](https://openid.net/specs/openid-sse-framework-1_0.html#delivery-meta).',
         example={
-            'method': 'https://schemas.openid.net/secevent/risc/delivery-method/push',
-            'endpoint_url': 'https://receiver.example.com/push',
+            'method': 'https://schemas.openid.net/secevent/risc/delivery-method/poll',
+            'endpoint_url': 'https://receiver.example.com/poll',
         },
     )
     min_verification_interval: Optional[int] = Field(
